<resources>
    <string name="app_name">Gif Search</string>

    <string name="recommend">Recommend</string>

    <!-- 设置 -->
    <string name="setting">Setting</string>
    <string name="tab_guide">Guide</string>
    <string name="tab_trend">Trend</string>
    <string name="tab_search">Search</string>
    <string name="tab_liked">Liked</string>

    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="support">Support Us</string>
    <string name="version">Use International</string>
    <string name="privacy">Privacy Policy</string>
    <string name="permission_setting">Setting permissions</string>
    <string name="about_right">Copyright @ 2018–2020 %s All rights reserved</string>

    <string name="share_content">【%s】This application is very good, recommend it. Get address\n%s</string>

    <string name="permission_tips">We need:
        \n【Storage permissions】Used to hold some cached data
        \n【Phone Info】In order to count device information and make a better user experience
        \n Denying corresponding permissions will not be able to use some features</string>
    <string name="permission_accept">Accept</string>
    <string name="permission_reject">Reject</string>
    <string name="reject_permission_tips">Denying permission will not be able to use certain features</string>
    <string name="no_wire_store_permission_tips">No write storage permissions</string>
    <string name="no_read_store_permission_tips">No read storage permissions</string>

    <string name="loading">Loading</string>
    <string name="searching">Searching</string>
    <string name="please_input_search_content">Enter search content</string>
    <string name="file_not_found">file does not exist</string>
    <string name="already_download">Downloaded</string>
    <string name="already_save_to">Saved to:</string>

    <string name="loading_ad_tips">Great content loading, please wait</string>

    <string name="backup_restore">Data backup and recovery</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="del_backup">Delete Backup</string>
    <string name="warm_tips">Tips</string>
    <string name="backup_tips">This will overwrite the previous backup. Do you need a backup?</string>
    <string name="del_backup_tips">This operation will delete your backup file. Do you need to delete it?</string>
    <string name="cancle">Cancel</string>
    <string name="ok">Ok</string>
    <string name="please_input_content">Please enter what you want to translate</string>
    <string name="remove_tips">Do you want to remove?</string>
    <string name="added_to_words">Added to word book</string>
    <string name="removed_from_words">Has been removed from the word book</string>
    <string name="un_slelectd">Unselected</string>
    <string name="no_backup_data">No backup data</string>
    <string name="backup_success">Backup success</string>
    <string name="backup_fail">Backup failed</string>
    <string name="restore_success">Successful recovery</string>
    <string name="restore_fail">Recovery failure</string>
    <string name="del_backup_success">Delete backup successfully</string>
    <string name="fetchVCode">FetchCode</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="mine">Mine</string>
    <string name="choose_video">Choose Video</string>

    <string name="preview_video_unavailable_tips">Can not play this video.</string>


</resources>
