<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <include layout="@layout/include_top_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <Button
            android:id="@+id/btnBackup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/backup"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/btn_backup_bg"/>


        <Button
            android:id="@+id/btnRestore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restore"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:background="@drawable/btn_backup_bg"/>

        <Button
            android:id="@+id/btnDeleteBackup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/del_backup"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:background="@drawable/shape_f44336_r30" />

    </LinearLayout>

<!--    <com.allever.lib.ad.chain.BannerLayout-->
<!--        android:id="@+id/adContainer"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:visibility="gone"/>-->

</RelativeLayout>